<resources>

    <!--  common  -->
    <string name="app_name">Room Requests</string>
    <string name="submit">Submit</string>
    <string name="location_selector_title">Set Location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--  login  -->
    <string name="username">Username: </string>
    <string name="username_hint">Enter username</string>
    <string name="password">Password: </string>
    <string name="password_hint">Enter password</string>
    <string name="keep_logged_in">Keep me logged in</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="logo_description">Revature Logo</string>
    <string name="username_icon_description">Username Icon</string>
    <string name="password_icon_description">Password Icon</string>
    <string name="forgot_password_dialog">Enter your e-mail to receive the reset instructions</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="email_hint">Enter your e-mail</string>
    <string name="password_reset">Reset Password</string>

    <!--  rooms table  -->
    <string name="select_first_room">Select a room to perform an action</string>
    <string name="select_second_room">Select the room you would like to swap with</string>
    <string name="request">Request</string>
    <string name="request_swap">Request Swap</string>
    <string name="request_button">New Request</string>
    <string name="swap_button">Swap</string>
    <string name="unoccupied_key">Unoccupied</string>
    <string name="occupied_key">Occupied</string>
    <string name="current_room">Currently Assigned Room</string>
    <string name="start_date">Start Date:</string>
    <string name="start_date_hint">Start Date</string>
    <string name="end_date">End Date:</string>
    <string name="end_date_hint">End Date</string>
    <string name="room_table_helper">Enter start and end dates to view room availabilities</string>
    <string name="date_icon_description">Date icon</string>

    <!--  room and request table  -->
    <string name="batch">Batch: </string>
    <string name="room_number">Room Number: </string>
    <string name="trainer">Trainer: </string>
    <string name="start_end">Occupied: </string>
    <string name="seats">Capacity: </string>
    <string name="no_string">N/A</string>
    <string name="number_of_results_label">Results:</string>

    <!--  requests  -->
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="reason_hint">Reason <font color="#FF0000">*</font></string>
    <string name="swap_dates">Requested for:</string>
    <string name="accepted_key">Accepted</string>
    <string name="rejected_key">Rejected</string>
    <string name="request_made_date">Request made:</string>
    <string name="accept_request_dialog_message">Provide a reason for accepting this request</string>
    <string name="reject_request_dialog_message">Provide a reason for rejecting this request</string>
    <string name="request_made_on">Request made on</string>
    <string name="swap_request_made_on">Swap request made on</string>
    <string name="request_reason_label">Reason for request:</string>

    <!--  make request  -->
    <string name="start_date_required">Start Date <font color='#FF0000'>*</font></string>
    <string name="end_date_required">End Date <font color='#FF0000'>*</font></string>
    <string name="comments">Reason for request</string>
    <string name="comment_label">Reason <font color='#FF0000'>*</font></string>
    <string name="okay">OK</string>
    <string name="request_submitted">Request Submitted</string>
    <string name="request_submit_message">Your request was successfully submitted.</string>
    <string name="request_dates">Requesting for:</string>
    <string name="batch_picker_label">Batch: <font color="#FF0000">*</font> </string>

    <!--  nav drawer  -->
    <string name="room_request_title">Room Request</string>
    <string name="pending_requests_title">Pending Requests</string>
    <string name="accepted_requests_title">Accepted Requests</string>
    <string name="rejected_requests_title">Rejected Requests</string>
    <string name="requests_title">Request List</string>
    <string name="settings_menu_title">Settings</string>

    <string name="down_arrow">down arrow</string>

    <string name="freepik_attribution">Icon made by Freepik from www.flaticon.com</string>
    <string name="mynamepong_attribution">Icon made by mynamepong from www.flaticon.com</string>
    <string name="trex_attribution">Icon made by t-rex from www.flaticon.com</string>
    <string name="dmitri13_attribution">Icon made by dmitri13 from www.flaticon.com</string>

</resources>
