<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.revature.roomrequests.pendingrequest.AcceptRejectRequestFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_accept_reject_request_room1_batch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/batch"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_accept_reject_request_room1_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/room_number"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_accept_reject_request_room1_trainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/trainer"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_accept_reject_request_room1_dates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/start_end"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_accept_reject_arrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/down_arrow"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_accept_reject_request_room2_batch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/batch"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_accept_reject_request_room2_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/room_number"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_accept_reject_request_room2_trainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/trainer"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_accept_reject_request_room2_dates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/start_end"
                android:textSize="16sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_accept_reject_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="48dp"
            android:background="@android:drawable/editbox_background"
            android:gravity="top|left"
            android:hint="@string/comments"
            android:inputType="textMultiLine"
            android:lines="4"
            android:scrollbars="vertical"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_accept_reject_request_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/revature_orange"
                android:text="@string/accept"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_accept_reject_request_reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/revature_orange"
                android:text="@string/reject"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
