<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".roomrequesttable.RoomRequestTableFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingStart="@dimen/card_request_date_margin"
        android:paddingEnd="@dimen/card_request_date_margin"
        android:paddingBottom="@dimen/key_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_room_table_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/key_margin"
                android:gravity="center"
                android:text="@string/start_date"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/et_room_table_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/key_margin"
                android:background="@drawable/container_bottom_border_white"
                android:hint="mm/dd/yyyy"
                android:inputType="date"
                android:textColor="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/btn_room_table_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/calendar_small_white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_room_table_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/key_margin"
                android:gravity="center"
                android:text="@string/end_date"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/et_room_table_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/key_margin"
                android:background="@drawable/container_bottom_border_white"
                android:hint="mm/dd/yyyy"
                android:inputType="date"
                android:textColor="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/btn_room_table_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/calendar_small_white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rooms_info_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:divider="@color/dark_gray"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/card_request_date_margin"
        android:paddingTop="5dp"
        android:paddingRight="@dimen/card_request_date_margin"
        android:paddingBottom="@dimen/card_padding">

        <TextView
            android:id="@+id/tv_request_list_results"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/request_number_of_results_label"
            android:textColor="@android:color/white"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_request_accepted_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/key_margin"
            android:background="@color/room_available"
            android:paddingLeft="@dimen/key_padding"
            android:paddingRight="@dimen/key_padding"
            android:text="@string/unoccupied_key" />

        <TextView
            android:id="@+id/tv_request_rejected_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/key_margin"
            android:background="@color/room_unavailable"
            android:paddingLeft="@dimen/key_padding"
            android:paddingRight="@dimen/key_padding"
            android:text="@string/occupied_key" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_room_requests_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>